# scribble

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  add_module.sh  build.sh  remove_module.sh
include/: context.hpp  paintMachine.hpp  pch.hpp  types.hpp  window.hpp
include/utils/: debug.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
resources/: default.vs.glsl
src/: context.cpp  main.cpp  window.cpp
